[package]
name = "warp"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "1.0.6"
anyhow = "1.0.102"
bincode = "1.3.3"
sysinfo = "0.38.4"
tempfile = "3.27.0"
indicatif = "0.18.4"
ratatui = "0.29.0"
crossterm = "0.28.1"
eframe = "0.31.0"
tokio-util = "0.7.18"
serde_json = "1.0.149"
directories = "6.0.0"
futures-util = "0.3.32"
scraper = "0.26.0"
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "stream", "blocking", "gzip", "brotli", "cookies", "rustls"] }
pcap = { version = "2.2.0", optional = true }
pnet = { version = "0.35.0", optional = true }
regex = "1.12.3"
sha2 = "0.11.0"
hex = "0.4.3"
m3u8-rs = "6.0.0"

[features]
default = []
capture = ["pcap", "pnet"]

[dev-dependencies]
tempfile = "3.27.0"

