[package]
name = "warp"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
sysinfo = "0.38.4"
indicatif = "0.18.4"
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio-util = "0.7.18"
serde_json = "1.0.149"
directories = "6.0.0"
futures-util = "0.3.32"
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["stream", "gzip", "brotli", "rustls"] }
sha2 = "0.11.0"
hex = "0.4.3"
m3u8-rs = "6.0.0"

[dev-dependencies]
tempfile = "3.27.0"

